--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title> Scenterverse Wiki </title>
 
-  <link href="styles/style.css" rel="stylesheet">
+  <link href="styles/style.css" rel="stylesheet"/>
 
   <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet"> 
 
