Created my first animation!

--- a/MothersDay.html
+++ b/MothersDay.html
@@ -16,7 +16,7 @@
 
         <section id="intro">
             
-            <div class=".int">
+            <div class="int">
 
                 <h1> Happy Mothers Day Mom </h1>
 
