--- a/MothersDay.html
+++ b/MothersDay.html
@@ -37,11 +37,16 @@
 
         <main>
 
-            <section class="2nd">
+            <section id="2nd">
 
-                <div>
+                <div class="seco">
 
-
+                    <p> 
+                        Thank you mom for everything you've done for me. You've been there for me through 
+                        thick and thin. You have been one of my rolemodels all my life and you've also 
+                        helped me make many different difficult decisions. Again, thank you for everything that
+                        you've done and I want you to know to know that I love you with all my Heart.
+                    </p>
 
                 </div>
 
