added more stuff

--- a/CharactersArt.html
+++ b/CharactersArt.html
@@ -63,7 +63,8 @@
 
         <p>
         
-            Here is the collection of all the characters i've created. Click the images will take you to the page containint the characters art page.
+            Here is the collection of all the characters i've created. Click the images will take you to the 
+            page containint the characters art page.
         
         </p>
 
