--- a/Pixel Art.html
+++ b/Pixel Art.html
@@ -75,7 +75,12 @@
                 </div>
 
             </main>
-            <p> deez nuts </p>
+
+            <div class="anims">
+
+                <img src=""
+
+            </div>
 
             <script src="scripts/Pixel.js"></script>
 
