done with mothers day

--- a/MothersDay.html
+++ b/MothersDay.html
@@ -27,7 +27,7 @@
 
                     <p> Today is May 8th which is the perfect time for me to express how much I care about you! </p>
 
-                    <img src='images/Mom1.jpg' alt="Test Image" />
+                    <img src='images/IMG_0121.JPG' alt="Test Image" />
 
                 </div>
 
@@ -41,13 +41,16 @@
 
                 <div class="seco">
 
-                    <p> 
-                        Thank you mom for everything you've done for me. You've been there for me through 
-                        thick and thin. You have been one of my rolemodels all my life and you've also 
+                    <p>
+
+                        Thank you mom for everything you've done for me. You've been there for me through
+                        thick and thin. You have been one of my rolemodels all my life and you've also
                         helped me make many different difficult decisions. Again, thank you for everything that
                         you've done and I want you to know to know that I love you with all my Heart.
-                    </p>
 
+
+                    </p>
+                    <img class="secoimg" src="images/IMG_0127.JPG" />
                 </div>
 
 
