--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                  <li> <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/TestCode.html"> Tests</a></li>
                  
-                 <li> <a  href="#" onclick="func(0)" id="Dark"> Light </a></li>
+                 <li> <a  href="#" onclick="func(0)" id="Dark"> Dark </a></li>
 
 
              </ul>
