--- a/index.html
+++ b/index.html
@@ -32,17 +32,21 @@
 
          <div class="Container">
 
-                  <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Pixel%20Art.html"> Art </a> 
 
-                  <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/CSSTest.html"> Drybass  </a>
+             <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Pixel%20Art.html"> Art </a>
 
-                  <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/GameIdeas.html"> Game </a>
+             <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/CSSTest.html"> Drybass  </a>
 
-                  <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/TestCode.html"> Tests</a>
-                  
-                  <a href="#"> Music </a>
+             <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/GameIdeas.html"> Game </a>
 
-                  <a href="#" onclick="func(0)" id="Dark"> Dark </a>
+             <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/TestCode.html"> Tests</a>
+
+
+             <a href="#"> Music </a>
+
+             <a href="#" onclick="func(0)" id="Dark"> Dark </a>
+
+             <a id="date"> </a>
 
          </div>
 
