--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
              <div id="info">
 
-                 <h3> About Me </h3>
+                 <h3 id="me"> About Me </h3>
 
                  <img src="images/me.png" />
 
@@ -133,11 +133,13 @@
 
                                  <th> Art </th>
 
-                                 <th> Drybass  </th>
+                                 <th> Drybass </th>
 
                                  <th> Game </th>
 
                                  <th> Tests </th>
+
+                                 <th> Music </th>
 
                              </tr>
 
@@ -149,7 +151,7 @@
 
                                  <td> Landscapes </td>
 
-                                 <td> Landscapes </td>
+                                 <td> CSS </td>
 
                              </tr>
 
@@ -158,6 +160,8 @@
                                  <td id="links"> <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/CharactersArt.html"> Characters </a> </td>
 
                                  <td> Lore </td>
+
+                                 <td> Javascript </td>
 
                              </tr>
 
