added new stuff and creating more js stuff

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 
                                  <td> Lore </td>
 
+                                 <td> Game2</td>
+
                                  <td> Javascript </td>
 
                              </tr>
