--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
              <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/TestCode.html"> Tests</a>
 
 
-             <a href="#"> Music </a>
+             <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Misc.html"> Misc </a>
 
              <a href="#" onclick="func(0)" id="Dark"> Dark </a>
 
