--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
              <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Misc.html"> Misc </a>
 
-             <a href="#" onclick="func(0)" id="Dark"> Dark </a>
+             <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Misc.html" onclick="func(0)" id="Dark"> Dark </a>
 
              <a id="date"> </a>
 
