updated more stuff

--- a/Misc.html
+++ b/Misc.html
@@ -26,10 +26,11 @@
 
             <div class="Container">
 
+                <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Index.html"> Home </a>
 
-                <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Pixel%20Art.html"> Home </a>
+                <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Pixel%20Art.html"> Art </a>
 
-                <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/CSSTest.html"> Art  </a>
+                <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/CSSTest.html"> Drybass  </a>
 
                 <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/GameIdeas.html"> Game </a>
 
