added archive page

--- a/Pixel Art.html
+++ b/Pixel Art.html
@@ -86,7 +86,7 @@
             </div>
 
             <div id="arch">
-                <a href="#">
+                <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Archives.html">
                 <img src="images/Archieve door.png" onmouseover="this.src = 'images/Archieve door-open.gif'" onmouseout="this.src = 'images/Archieve door-close.gif'"/>
                 </a>
             </div>
