created a new folder for archives

--- a/Archives.html
+++ b/Archives.html
@@ -16,11 +16,11 @@
 
     <section id="back">
 
-        <img id="img1" src="images/Archives-Updated.png" usemap="#mapgeneric" />
+        <img id="img1" src="images/Archives/Mainbuilding/Archives-Updated.png" usemap="#mapgeneric" />
 
         <map name="mapgeneric" id="mapgeneric">
 
-            <area alt="Door" href="javascript:replaceImage('img1', 'images/Archives-Updated-Recovered2.png', 'maphelfer')"
+            <area alt="Door" href="javascript:replaceImage('img1', 'images/Archives/Mainbuilding/Archives-Updated-Recovered2.png', 'maphelfer')"
                   shape="rect" id="door" coords="540,427,722,571" />
 
             
