--- a/Pixel Art.html
+++ b/Pixel Art.html
@@ -87,7 +87,7 @@
 
             <div id="arch">
                 <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/Archives.html">
-                <img src="images/Archieve door.png" onmouseover="this.src = 'images/Archieve door-open.gif'" onmouseout="this.src = 'images/Archieve door-close.gif'"/>
+                <img src="images/Archives/Mainbuilding/Archieve door.png" onmouseover="this.src = 'images/Archives/Mainbuilding/Archieve door-open.gif'" onmouseout="this.src = 'images/Archives/Mainbuilding/Archieve door-close.gif'"/>
                 </a>
             </div>
 
