--- a/Archives.html
+++ b/Archives.html
@@ -50,32 +50,32 @@
         <div class="container">
             <div class="mySlides">
                 <div class="numbertext">1 / 6</div>
-                <img src="img_woods_wide.jpg" >
+                <img src="images/Archives/Archive/Man test Walking Backward Distraught.gif" >
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">2 / 6</div>
-                <img src="img_5terre_wide.jpg" >
+                <img src="images/Archives/Archive/Perspectives.png" >
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 6</div>
-                <img src="img_mountains_wide.jpg" >
+                <img src="images/Archives/Archive/" id="farm">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">4 / 6</div>
-                <img src="img_lights_wide.jpg" >
+                <img src="images/Archives/Archive/" >
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">5 / 6</div>
-                <img src="img_nature_wide.jpg" >
+                <img src="images/Archives/Archive/" >
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">6 / 6</div>
-                <img src="img_snow_wide.jpg" >
+                <img src="images/Archives/Archive/" >
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
