updates to lucas art page

--- a/CharactersArt.html
+++ b/CharactersArt.html
@@ -75,7 +75,7 @@
 
                 <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/LucasImgs.html">
 
-                    <img src="images/Ffacing.png" alt="Lucas" class="Lucas" />
+                    <img src="images/lucas/Ffacing.png" alt="Lucas" class="Lucas" />
                 </a>
                
                 <div class="middle">
