--- a/Pixel Art.html
+++ b/Pixel Art.html
@@ -81,7 +81,7 @@
 
             <div class="anim">
 
-                <img src="images/Clapboard.gif"/>
+                <img src="images/lucas/Clapboard.gif"/>
 
             </div>
 
