--- a/JavaTest.html
+++ b/JavaTest.html
@@ -37,9 +37,6 @@
 
                 <a href="file:///C:/Users/Anthony/Desktop/Website/web-projects/test-site/TestCode.html"> Tests</a>
 
-
-                <a href="#"> Music </a>
-
                 <a href="#" id="Dark"> Dark </a>
 
 
@@ -49,9 +46,10 @@
 
         <section id="alert tests">
             
-            <div class="alerts">
+            <div class="alert">
                 
                 <button> Alert 1 </button>
+
 
             </div>
 
